# ooxxwars

./: README.md  ooxxwars.cabal  stack.yaml
src/: Audio.hs  Control.hs  Control.hs.orig  Main.hs  Main.hs.orig  Model.hs  View.hs
src/Model/: Board.hs  Player.hs  SuperBoard.hs
tests/: Test.hs
